<resources>
    <string name="app_name">Smarternships</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be at least 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="smarternship_logo_description">Smarternship Logo</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="register_button">Create account</string>
    <string name="register_header">Account Registration</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_register"></string>
    <string name="invalid_conf">Passwords must match</string>
    <string name="reg_failed">Registration failed</string>
    <string name="setup_string">Let\'s get set up.</string>
    <string name="who_string">Who are you?</string>
    <string name="intern_button">Intern</string>
    <string name="employer_button">Employer</string>

    <!-- Strings Related to Company Job Creation   <>-->
    <string name="create_job_header">Create Job</string>
    <string name="choose_time_button">Time Frame</string>
    <string name="prompt_create_job_name">Job Name</string>
    <string name="prompt_create_job_timeframe">Job Time Frame</string>
    <string name="prompt_create_job_description">Job Description</string>
    <string name="create_job_button">Create Job</string>
    <string name="apply_string">Apply</string>

    <!-- Strings Related to Company Job Managing  <>-->
    <string name="manage_job_header">Manage Job</string>
    <string name="prompt_manage_job_name">Job Name</string>
    <string name="prompt_manage_intern">No Intern</string>
    <string name="prompt_manage_job_timeframe">Job Time Frame</string>
    <string name="prompt_manage_job_description">Job Description</string>
    <string name="create_manage_button">Create Job</string>
    <string name="action_find_job">Find/Create Job</string>
    <string name="action_view_jobs">View My Jobs</string>
    <string name="available_jobs">Available Jobs</string>
    <string name="company_name">Company Name</string>
    <string name="view_button">View</string>
    <string name="intern_namenone_hint">Intern Name/None</string>
    <string name="time_frame">Time Frame</string>
    <string name="manage_button">Manage</string>
    <string name="applicants_button">Applicants</string>
    <string name="view_job_title">View Job</string>
    <string name="current_jobs">Current Jobs</string>
    <string name="prior_jobs">Prior Jobs</string>
    <string name="account_title">Account</string>
    <string name="edit_button">Edit</string>
    <string name="my_jobs_string">My Jobs</string>
    <string name="current_intern">Current Intern</string>
    <string name="del_button">Del</string>
    <string name="save_button">Save</string>
    <string name="finish_button">Finish</string>
    <string name="delete">Delete</string>
    <string name="user_or_company_name">User or Company Name</string>
    <string name="description">Description</string>
    <string name="edit_account">Edit Account</string>
    <string name="name">name</string>
    <string name="email">Email</string>
    <string name="continue_str">Continue</string>
    <string name="applicants">Applicants</string>

</resources>